<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backFromCategoryButton"
            android:layout_width="@dimen/min_size"
            android:layout_height="@dimen/min_size"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back_blue_foreground" />

        <TextView
            android:id="@+id/nameCategoryItemText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/deleteCategoryButton"
            android:layout_width="@dimen/min_size"
            android:layout_height="@dimen/min_size"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:contentDescription="@string/delete"
            android:src="@drawable/ic_delete_foreground" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextNewNameCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="@dimen/min_size"
            android:textColorHint="@color/gray"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/renameCategoryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/row_horizontal"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/rename" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/row_horizontal"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextNewOperation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="@dimen/min_size"
            android:textColorHint="@color/gray"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/addOperationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/row_horizontal"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:text="@string/add" />
    </LinearLayout>

</LinearLayout>