<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/app_name"
        android:layout_marginTop="@dimen/app_name_top"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backFromProfileButton"
            android:layout_width="@dimen/min_size"
            android:layout_height="@dimen/min_size"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back_blue_foreground" />

        <TextView
            android:id="@+id/usernameProfileTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:textColor="@color/blue"
            android:textSize="@dimen/username"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_text_horizontal"
        android:layout_marginTop="@dimen/account_data_top"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextProfileEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="@dimen/min_size"
                android:textColorHint="@color/gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/updateEmailButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@color/white"
            android:clickable="true"
            android:contentDescription="@string/update"
            android:src="@drawable/ic_check_mark_foreground" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_text_horizontal"
        android:layout_marginTop="@dimen/password_top"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextProfileUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_login"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="@dimen/min_size"
                android:textColorHint="@color/gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/updateLoginButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@color/white"
            android:clickable="true"
            android:contentDescription="@string/update"
            android:src="@drawable/ic_check_mark_foreground" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/edit_text_horizontal"
        android:layout_marginTop="@dimen/password_top"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/editTextProfilePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="@dimen/min_size"
                android:textColorHint="@color/gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/updatePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@color/white"
            android:clickable="true"
            android:contentDescription="@string/update"
            android:src="@drawable/ic_check_mark_foreground" />
    </LinearLayout>
</LinearLayout>